Added header image to EV Charging page

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -660,3 +660,11 @@ table.levels {
     text-align: center;
   }
 }
+
+p.header-image {
+  padding: 0;
+  margin-bottom: -56px;
+  img {
+    width: 100%;
+  }
+}
