--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -668,3 +668,11 @@ p.header-image {
     width: 100%;
   }
 }
+
+
+// Per page overwrites
+body.index {
+  p.header-image {
+    margin-bottom: 25px;
+  }
+}
