Cargo Insurance - Changed 'vehicle type' to be comma separated + added 'is_autonomous' boolean

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -675,7 +675,7 @@ table.cargo {
 
 table.cargo_vehicles {
   td:first-of-type, th:first-of-type {
-    text-align: right;
+    text-align: left;
   }
 }
 
